--- a/{{cookiecutter.extension_name}}/.gitignore
+++ b/{{cookiecutter.extension_name}}/.gitignore
@@ -1,15 +1,51 @@
-labextension/lib/
-nbextension/lib/
-nbextension/embed/
-node_modules/
-npm-debug.log
-*.egg-info/
-build/
-dist/
+MANIFEST
+build
+dist
+lib
+static
+themes
+jupyterlab/static
+jupyterlab/schemas
+jupyterlab/themes
+jupyterlab/geckodriver
+dev_mode/schemas
+dev_mode/static
+dev_mode/themes
+dev_mode/workspaces
+dev_mode/stats.json
 
-# Compiled javascript
-{{cookiecutter.extension_name}}/__pycache__/
-{{cookiecutter.extension_name}}/static/
-
-# OS X
+packages/theme-*/static
+node_modules
+.cache
+.vscode
+*.py[co]
+.pytest_cache
+__pycache__
+*.egg-info
+*~
+*.bak
+.ipynb_checkpoints
 .DS_Store
+\#*#
+.#*
+
+*.swp
+*.map
+.idea/
+*.iml
+
+coverage/
+tests/**/coverage
+tests/**/.cache-loader
+docs/_build
+docs/api
+docs/source/_build
+packages/services/examples/node/config.json
+examples/app/build
+examples/app/themes
+examples/app/schemas
+
+lerna-debug.log
+yarn-error.log
+
+junit.xml
