--- a/{{cookiecutter.extension_name}}/package.json
+++ b/{{cookiecutter.extension_name}}/package.json
@@ -10,16 +10,6 @@
     "jupyterlab-theme"
   ],
   "license": "BSD-3-Clause",
-  "homepage": "{{cookiecutter.url}}",
-{%- if "http://github.com/" in cookiecutter.url or "https://github.com/" in cookiecutter.url %}
-  "bugs": {
-    "url": "{{cookiecutter.url}}/issues"
-  },
-  "repository": {
-    "type": "git",
-    "url": "{{cookiecutter.url}}.git"
-  },
-{%- endif %}
   "files": [
     "lib/*.d.ts",
     "lib/*.js.map",
@@ -33,6 +23,7 @@
   },
   "scripts": {
     "build": "tsc",
+    "build:webpack": "webpack",
     "clean": "rimraf lib",
     "prepare": "npm run clean && npm run build",
     "watch": "tsc -w"
@@ -49,7 +40,6 @@
     "mini-css-extract-plugin": "~0.4.4",
     "svg-url-loader": "~2.3.1",
     "svgo-loader": "~2.1.0",
-    "typescript": "~3.1.1",
     "url-loader": "~1.0.1",
     "watch": "~1.0.2",
     "webpack": "~4.12.0",
@@ -60,7 +50,17 @@
   },
   "jupyterlab": {
     "extension": true,
-    "themeDir": "static",
-    "themePath": "static/index.css"
-  }
+    "themeDir": "style",
+    "themePath": "style/index.css"
+  },
+{%- if "http://github.com/" in cookiecutter.url or "https://github.com/" in cookiecutter.url %}
+  "bugs": {
+    "url": "{{cookiecutter.url}}/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "{{cookiecutter.url}}.git"
+  },
+{%- endif %}
+  "homepage": "{{cookiecutter.url}}"
 }
