--- a/{{cookiecutter.extension_name}}/package.json
+++ b/{{cookiecutter.extension_name}}/package.json
@@ -30,13 +30,13 @@
     "watch:webpack": "webpack --watch"
   },
   "dependencies": {
-    "@jupyterlab/application": "^1.0.0",
-    "@jupyterlab/apputils": "^1.0.0"
+    "@jupyterlab/application": "^2.0.0-beta.2",
+    "@jupyterlab/apputils": "^2.0.0-beta.2"
   },
   "devDependencies": {
     "rimraf": "~2.6.2",
     "typedoc": "~0.12.0",
-    "typescript": "~3.3.1",
+    "typescript": "~3.7.1",
     "css-loader": "~0.28.7",
     "mini-css-extract-plugin": "~0.4.4",
     "svgo": "~1.0.4",
