Clean up tsconfig

--- a/{{cookiecutter.extension_name}}/tsconfig.json
+++ b/{{cookiecutter.extension_name}}/tsconfig.json
@@ -3,21 +3,22 @@
     "allowSyntheticDefaultImports": true,
     "composite": true,
     "declaration": true,
-    "noImplicitAny": true,
-    "noEmitOnError": true,
-    "noUnusedLocals": true,
     "esModuleInterop": true,
-    "preserveWatchOutput": true,
-    "module": "commonjs",
-    "moduleResolution": "node",
-    "resolveJsonModule": true,
-    "target": "es2015",
-    "lib": ["dom", "es2015"],
+    "incremental": true,
     "jsx": "react",
-    "types": [],
-
+    "module": "esnext",
+    "moduleResolution": "node",
+    "noEmitOnError": true,
+    "noImplicitAny": true,
+    "noUnusedLocals": true,
     "outDir": "lib",
-    "rootDir": "src"
+    "preserveWatchOutput": true,
+    "resolveJsonModule": true,
+    "rootDir": "src",
+    "sourceMap": true,
+    "strict": true,
+    "target": "es2017",
+    "types": []
   },
   "include": [
     "src/*"
