--- a/{{cookiecutter.extension_name}}/package.json
+++ b/{{cookiecutter.extension_name}}/package.json
@@ -22,7 +22,7 @@
     "lib": "lib/"
   },
   "scripts": {
-    "build": "tsc -b",
+    "build": "tsc",
     "build:webpack": "webpack",
     "clean": "rimraf lib && rimraf static",
     "prepare": "npm run clean && npm run build",
