--- a/{{cookiecutter.extension_name}}/package.json
+++ b/{{cookiecutter.extension_name}}/package.json
@@ -24,7 +24,7 @@
   "scripts": {
     "build": "tsc",
     "build:webpack": "webpack",
-    "clean": "rimraf lib && rimraf static",
+    "clean": "rimraf lib && rimraf static && rimraf tsconfig.tsbuildinfo",
     "prepare": "npm run clean && npm run build",
     "watch": "tsc -w",
     "watch:webpack": "webpack --watch"
